# watcher-zone-migration-plugin

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.ja.rst  README.rst  requirements.txt  setup.cfg
doc/source/: conf.py  configuration.ja.rst  faq.ja.rst  index.rst  install.ja.rst  install_watcher.ja.rst  installation.rst  usage.ja.rst  usage.rst
releasenotes/source/: conf.py  index.rst
tools/: README.ja.md  create_test_env.py  delete_test_env.py  execute_test.py  execute_test.sh
tools/tests/: 00-live-migrate-2.yaml  01-mix-migrate-2.yaml  02-volume-migrate-2.yaml  02-volume-retype-2.yaml  03-volume-update.yaml  env0.yaml  env1.yaml  test.json
tools/userdata/: cpu.yaml  disk.yaml  memory.yaml  network.yaml
tools/utils/: cinder.py  common.py  glance.py  keystone.py  neutron.py  nova.py  tools.py
zone_migration/: __init__.py  goal.py  live_migration.py  strategy.py
zone_migration/actions/: cold_migration.py  live_migration.py  my_message.py  volume_migration.py  volume_retype.py  volume_update.py
zone_migration/conf/: __init__.py
zone_migration/tests/: test_zone_migration.py
zone_migration/workflow_engine/: parallel.py
