[metadata]
name = zone_migration
summary = zone_migration
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    zone_migration

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = zone_migration/locale
domain = zone_migration

[update_catalog]
domain = zone_migration
output_dir = zone_migration/locale
input_file = zone_migration/locale/zone_migration.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = zone_migration/locale/zone_migration.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[entry_points]
watcher_goals =
    zone_migration = zone_migration.goal:ZoneMigration

watcher_strategies =
    parallel_migration = zone_migration.strategy:ParallelMigrationStrategy

watcher_actions =
    my_message = zone_migration.actions.my_message:MyMessageAction
    live_migration = zone_migration.actions.live_migration:LiveMigrationAction
    cold_migration = zone_migration.actions.cold_migration:ColdMigrationAction
    volume_migration = zone_migration.actions.volume_migration:VolumeMigrationAction

watcher_workflow_engines =
    parallel = zone_migration.workflow_engine.parallel:ParallelWorkFlowEngine
